--- a/wp-content/themes/Masterchef/css/style.css
+++ b/wp-content/themes/Masterchef/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url(http://weloveiconfonts.com/api/?family=entypo);
 /* entypo */
-/* line 18, ../scss/foundation/_variables.scss */
+/* line 15, ../scss/foundation/_variables.scss */
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif; }
 
@@ -25,7 +25,7 @@
 /* line 246, ../scss/foundation/_global.scss */
 html,
 body {
-  font-size: 100%; }
+  font-size: 16px; }
 
 /* line 249, ../scss/foundation/_global.scss */
 body {
@@ -880,8 +880,8 @@ blockquote p {
 /* line 108, ../scss/foundation/_top-bar.scss */
 .top-bar {
   overflow: hidden;
-  height: 77px;
-  line-height: 77px;
+  height: 60px;
+  line-height: 60px;
   position: relative;
   background: #222222;
   margin-bottom: 1.875em; }
@@ -898,21 +898,21 @@ blockquote p {
     margin: 0; }
   /* line 130, ../scss/foundation/_top-bar.scss */
   .top-bar .name {
-    height: 77px;
+    height: 60px;
     margin: 0;
     font-size: 16px; }
     /* line 135, ../scss/foundation/_top-bar.scss */
     .top-bar .name h1 {
-      line-height: 77px;
+      line-height: 60px;
       font-size: 1.0625em;
       margin: 0; }
       /* line 139, ../scss/foundation/_top-bar.scss */
       .top-bar .name h1 a {
-        font-weight: bold;
+        font-weight: 100;
         color: white;
         width: 50%;
         display: block;
-        padding: 0 25.66667px; }
+        padding: 0 20px; }
   /* line 150, ../scss/foundation/_top-bar.scss */
   .top-bar .toggle-topbar {
     position: absolute;
@@ -926,12 +926,12 @@ blockquote p {
       font-weight: bold;
       position: relative;
       display: block;
-      padding: 0 25.66667px;
-      height: 77px;
-      line-height: 77px; }
+      padding: 0 20px;
+      height: 60px;
+      line-height: 60px; }
     /* line 168, ../scss/foundation/_top-bar.scss */
     .top-bar .toggle-topbar.menu-icon {
-      right: 25.66667px;
+      right: 20px;
       top: 50%;
       margin-top: -16px;
       padding-left: 40px; }
@@ -997,7 +997,7 @@ blockquote p {
     width: 100%;
     color: white;
     padding: 12px 0 12px 0;
-    padding-left: 25.66667px;
+    padding-left: 20px;
     font-size: 0.8125em;
     font-weight: bold;
     background: #222222; }
@@ -1036,7 +1036,7 @@ blockquote p {
     color: white; }
   /* line 306, ../scss/foundation/_top-bar.scss */
   .top-bar-section .has-form {
-    padding: 25.66667px; }
+    padding: 20px; }
   /* line 309, ../scss/foundation/_top-bar.scss */
   .top-bar-section .has-dropdown {
     position: relative; }
@@ -1049,7 +1049,7 @@ blockquote p {
       border: inset 5px;
       border-color: transparent transparent transparent rgba(255, 255, 255, 0.5);
       border-left-style: solid;
-      margin-right: 25.66667px;
+      margin-right: 20px;
       margin-top: -4.5px;
       position: absolute;
       top: 50%;
@@ -1074,18 +1074,18 @@ blockquote p {
       /* line 342, ../scss/foundation/_top-bar.scss */
       .top-bar-section .dropdown li a {
         font-weight: normal;
-        padding: 8px 25.66667px; }
+        padding: 8px 20px; }
       /* line 347, ../scss/foundation/_top-bar.scss */
       .top-bar-section .dropdown li.title h5 {
         margin-bottom: 0; }
         /* line 348, ../scss/foundation/_top-bar.scss */
         .top-bar-section .dropdown li.title h5 a {
           color: white;
-          line-height: 38.5px;
+          line-height: 30px;
           display: block; }
     /* line 356, ../scss/foundation/_top-bar.scss */
     .top-bar-section .dropdown label {
-      padding: 8px 25.66667px 2px;
+      padding: 8px 20px 2px;
       margin-bottom: 0;
       text-transform: uppercase;
       color: #555555;
@@ -1094,14 +1094,14 @@ blockquote p {
 
 /* line 368, ../scss/foundation/_top-bar.scss */
 .top-bar-js-breakpoint {
-  width: 48em !important;
+  width: 47.5em !important;
   visibility: hidden; }
 
 /* line 372, ../scss/foundation/_top-bar.scss */
 .js-generated {
   display: block; }
 
-@media only screen and (min-width: 48em) {
+@media only screen and (min-width: 47.5em) {
   /* line 377, ../scss/foundation/_top-bar.scss */
   .top-bar {
     background: #222222;
@@ -1137,16 +1137,16 @@ blockquote p {
     /* line 397, ../scss/foundation/_top-bar.scss */
     .top-bar-section ul {
       width: 100%;
-      font-size: 20px;
+      font-size: 1em;
       height: auto !important;
       display: block;
       text-align: center; }
-      /* line 404, ../scss/foundation/_top-bar.scss */
+      /* line 405, ../scss/foundation/_top-bar.scss */
       .top-bar-section ul li {
         float: left;
         width: 16.66%;
         position: relative; }
-        /* line 409, ../scss/foundation/_top-bar.scss */
+        /* line 410, ../scss/foundation/_top-bar.scss */
         .top-bar-section ul li.active a {
           background: inherit;
           color: white; }
@@ -1165,13 +1165,14 @@ blockquote p {
           bottom: 0;
           left: 50%;
           margin-left: -10px; }
-    /* line 419, ../scss/foundation/_top-bar.scss */
+    /* line 420, ../scss/foundation/_top-bar.scss */
     .top-bar-section li a:not(.button) {
-      padding: 0 25.66667px;
-      line-height: 77px;
+      padding: 0 20px;
+      line-height: 60px;
       font-weight: 100;
+      text-transform: uppercase;
       color: #878785; }
-      /* line 424, ../scss/foundation/_top-bar.scss */
+      /* line 426, ../scss/foundation/_top-bar.scss */
       .top-bar-section li a:not(.button):hover {
         color: #fff; }
         /* line 69, ../scss/foundation/_top-bar.scss */
@@ -1189,12 +1190,16 @@ blockquote p {
           bottom: 0;
           left: 50%;
           margin-left: -10px; }
-    /* line 434, ../scss/foundation/_top-bar.scss */
+    /* line 436, ../scss/foundation/_top-bar.scss */
     .top-bar-section > ul > .divider, .top-bar-section > ul > [role="separator"] {
       border: none;
       clear: none;
-      height: 77px;
+      height: 60px;
       width: 0px; } }
+    @media only screen and (min-width: 47.5em) and (min-width: 885px) {
+      /* line 397, ../scss/foundation/_top-bar.scss */
+      .top-bar-section ul {
+        font-size: 1.25em; } }
 /* line 1, ../scss/_custom-setup.scss */
 .alignright {
   float: right;
@@ -1296,3 +1301,7 @@ header.mainhead {
       /* line 40, ../scss/_header.scss */
       header.mainhead .call-to-action .button {
         padding: 5px 10px; } }
+
+/* line 47, ../scss/_header.scss */
+.main-content {
+  margin-top: 40px; }
