--- a/wp-content/themes/Masterchef/scss/foundation/_top-bar.scss
+++ b/wp-content/themes/Masterchef/scss/foundation/_top-bar.scss
@@ -7,14 +7,14 @@ $include-html-top-bar-classes: $include-html-classes !default;
 $topbar-bg:                            #222 !default;
 
 // Height and margin
-$topbar-height:                        77px !default;
+$topbar-height:                        60px !default;
 $topbar-margin-bottom:                 emCalc(30px) !default;
 
 // Control Input height for top bar
 $topbar-input-height:                  2.45em !default;
 
 // Controlling the styles for the title in the top bar
-$topbar-title-weight:                  bold !default;
+$topbar-title-weight:                  100 !default;
 $topbar-title-font-size:               emCalc(17px) !default;
 
 // Style the top bar dropdown elements
@@ -51,7 +51,7 @@ $topbar-menu-icon-color-toggled:       #888 !default;
 
 // Transitions and breakpoint styles
 $topbar-transition-speed:              300ms !default;
-$topbar-breakpoint:                    emCalc(768px) !default; // Change to 9999px for always mobile layout
+$topbar-breakpoint:                    emCalc(760px) !default; // Change to 9999px for always mobile layout
 $topbar-media-query:                   "only screen and (min-width: #{$topbar-breakpoint})" !default;
 
 // Divider Styles
@@ -396,7 +396,8 @@ $topbar-sticky-class:                  ".sticky" !default;
 
       ul {
         width: 100%;
-        font-size: 20px;
+        font-size: 1em;
+        @media only screen and (min-width: 885px) { font-size: emCalc(20px); }
         height: auto !important;
         display: block;
         text-align: center;
@@ -420,6 +421,7 @@ $topbar-sticky-class:                  ".sticky" !default;
           padding: 0 $topbar-height / 3;
           line-height: $topbar-height;
           font-weight: 100;
+          text-transform: uppercase;
           color: $mcgrey;
           &:hover { 
             color: #fff;
