--- a/wp-content/themes/Masterchef/scss/foundation/_variables.scss
+++ b/wp-content/themes/Masterchef/scss/foundation/_variables.scss
@@ -1,7 +1,4 @@
-//
-// Foundation Variables
-//
-
+// MIXINS
 
 @mixin bp($point) {
   @if $point == big {
@@ -19,7 +16,6 @@
   font-family: 'entypo', sans-serif;
 }
 
-
 @font-face {
   font-family: 'Square721';
   src: url('fonts/square721-bdex-bt-bold.eot'); /* IE9 Compat Modes */
@@ -32,43 +28,24 @@
   font-weight:  700;
 }
 
-// The default font-size is set to 100% of the browser style sheet (usually 16px)
-// for compatibility with browser-based text zoom or user-set defaults.
-$base-font-size: 100% !default;
 
-// $base-line-height is 24px while $base-font-size is 16px
-// $base-line-height: 150%;
-
-// This is the default html and body font-size for the base em value.
-
-// Since the typical default browser font-size is 16px, that makes the calculation for grid size.
-// If you want your base font-size to be a different size and not have it effect grid size too,
-// set the value of $em-base to $base-font-size ($em-base: $base-font-size;)
+$base-font-size: 16px;
 $em-base: 16px !default;
 
-// Working in ems is annoying. Think in pixels by using this handy function, emCalc(#px)
 @function emCalc($pxWidth) {
   @return $pxWidth / $em-base * 1em;
 }
 
-// Change whether or not you include browser prefixes
-// $experimental: true;
+// Variables
 
-// Various global styles
+$padding: 20px;
 
 $default-float: left;
 
- $body-bg: url(../img/Background.jpg) repeat;
+$body-bg: url(../img/Background.jpg) repeat;
 
-// Masterchef Brand Colours:
-
-$mcred: rgb(176,28,46);
 $mcorange: rgb(242,125,0);
 $mcgrey: rgb(135,135,133);
-$mcbrown: rgb(79,38,8);
-
-
-// Colors
 
 $primary-color: #111;
 $secondary-color: $mcgrey;
