--- a/wp-content/themes/Masterchef/css/style.css
+++ b/wp-content/themes/Masterchef/css/style.css
@@ -14,6 +14,10 @@
   font-style: normal;
   font-weight: 700; }
 
+/* line 53, ../scss/foundation/_variables.scss */
+.timeline-header, .timeline-footer {
+  background: red; }
+
 /* line 241, ../scss/foundation/_global.scss */
 *,
 *:before,
