--- a/wp-content/themes/Masterchef/scss/foundation/_variables.scss
+++ b/wp-content/themes/Masterchef/scss/foundation/_variables.scss
@@ -50,4 +50,5 @@ $mcgrey: rgb(135,135,133);
 $primary-color: #111;
 $secondary-color: $mcgrey;
 
+.timeline-header, .timeline-footer { background: red; }
 
