Talent Section and Talent Boxes added
Boxes and filtering functionality added

Signed-off-by: matt <matt@acmn.com.au>

--- a/wp-content/themes/Masterchef/scss/_toolkit.scss
+++ b/wp-content/themes/Masterchef/scss/_toolkit.scss
@@ -7,8 +7,11 @@
 }
 
 .contact-buttons {
+
+}
+
+.single-talent .contact-buttons {
   float:right;
-  width: 50%;
-  outline: 1px solid red;
+  width:50%;
   margin: 0 0 $padding $padding;
 }
