--- a/wp-content/themes/Masterchef/css/style.css
+++ b/wp-content/themes/Masterchef/css/style.css
@@ -833,13 +833,16 @@ blockquote p {
   .button.white-trans {
     background: rgba(255, 255, 255, 0.7); }
   /* line 16, ../scss/foundation/_buttons.scss */
+  .button.white {
+    background: #fff; }
+  /* line 20, ../scss/foundation/_buttons.scss */
   .button span {
     font-size: 0.7rem; }
     @media (max-width: 907px) and (min-width: 768px) {
-      /* line 16, ../scss/foundation/_buttons.scss */
+      /* line 20, ../scss/foundation/_buttons.scss */
       .button span {
         display: block; } }
-  /* line 23, ../scss/foundation/_buttons.scss */
+  /* line 27, ../scss/foundation/_buttons.scss */
   .button:after {
     font-family: 'entypo', sans-serif;
     content: '\E766';
@@ -851,14 +854,14 @@ blockquote p {
     -moz-transition-duration: 0.3s;
     -o-transition-duration: 0.3s;
     transition-duration: 0.3s; }
-  /* line 33, ../scss/foundation/_buttons.scss */
+  /* line 37, ../scss/foundation/_buttons.scss */
   .button:hover {
     background: rgba(255, 255, 255, 0.9); }
-    /* line 35, ../scss/foundation/_buttons.scss */
+    /* line 39, ../scss/foundation/_buttons.scss */
     .button:hover:after {
       right: 6px; }
 
-/* line 41, ../scss/foundation/_buttons.scss */
+/* line 45, ../scss/foundation/_buttons.scss */
 .contact-buttons .button {
   font-size: 16px;
   background: #111111;
@@ -866,10 +869,10 @@ blockquote p {
   font-size: 1em;
   padding: 1em 0px 1em 4em; }
   @media only screen and (min-width: 768px) {
-    /* line 41, ../scss/foundation/_buttons.scss */
+    /* line 45, ../scss/foundation/_buttons.scss */
     .contact-buttons .button {
       font-size: 13px; } }
-  /* line 48, ../scss/foundation/_buttons.scss */
+  /* line 52, ../scss/foundation/_buttons.scss */
   .contact-buttons .button:before {
     font-family: 'entypo', sans-serif;
     content: '\F30C';
@@ -878,22 +881,22 @@ blockquote p {
     top: 15px;
     font-size: 1.5em; }
   @media only screen and (min-width: 768px) {
-    /* line 57, ../scss/foundation/_buttons.scss */
+    /* line 61, ../scss/foundation/_buttons.scss */
     .contact-buttons .button:after, .contact-buttons .button:before {
       top: 12px; } }
-  /* line 63, ../scss/foundation/_buttons.scss */
+  /* line 67, ../scss/foundation/_buttons.scss */
   .contact-buttons .button.facebook:before {
     content: '\F30C'; }
-  /* line 67, ../scss/foundation/_buttons.scss */
+  /* line 71, ../scss/foundation/_buttons.scss */
   .contact-buttons .button.twitter:before {
     content: '\F309'; }
-  /* line 71, ../scss/foundation/_buttons.scss */
+  /* line 75, ../scss/foundation/_buttons.scss */
   .contact-buttons .button.web:before {
     content: '\27A6'; }
-  /* line 75, ../scss/foundation/_buttons.scss */
+  /* line 79, ../scss/foundation/_buttons.scss */
   .contact-buttons .button.dimmi:before {
     content: '\2302'; }
-  /* line 79, ../scss/foundation/_buttons.scss */
+  /* line 83, ../scss/foundation/_buttons.scss */
   .contact-buttons .button.other:before {
     content: '\E75B'; }
 
@@ -1473,3 +1476,97 @@ header.mainhead {
     /* line 105, ../scss/_talent.scss */
     .filters a:hover, .filters a.active-filter {
       color: #111111; }
+
+/* line 2, ../scss/_bookings.scss */
+.bookings h3 {
+  width: 100%;
+  text-align: center;
+  color: white;
+  background: #111111;
+  margin: 0;
+  height: 45px;
+  line-height: 45px;
+  font-size: 1.3em;
+  border-right: 1px solid #eee; }
+/* line 13, ../scss/_bookings.scss */
+.bookings article {
+  display: inline;
+  float: left;
+  width: 14.2857%;
+  height: 45px; }
+/* line 24, ../scss/_bookings.scss */
+.bookings article a {
+  width: 100%;
+  height: 45px;
+  text-align: left;
+  line-height: 45px;
+  display: block;
+  font-size: 1.3em;
+  color: #111111;
+  border: 1px solid #eee;
+  background: #fff;
+  text-decoration: none;
+  -webkit-transition-property: all;
+  -moz-transition-property: all;
+  -o-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease-in;
+  -moz-transition-timing-function: ease-in;
+  -o-transition-timing-function: ease-in;
+  transition-timing-function: ease-in;
+  padding-left: 20px; }
+  /* line 40, ../scss/_bookings.scss */
+  .bookings article a.select {
+    background: #111111;
+    border-bottom: 1px solid #111111;
+    color: white; }
+  /* line 46, ../scss/_bookings.scss */
+  .bookings article a:hover {
+    background: #111111;
+    color: white; }
+/* line 52, ../scss/_bookings.scss */
+.bookings article.day a {
+  text-align: center;
+  border: none;
+  background: #111111;
+  color: #fff;
+  height: 50px;
+  line-height: 50px; }
+/* line 61, ../scss/_bookings.scss */
+.bookings article.closed a {
+  color: #878785; }
+/* line 66, ../scss/_bookings.scss */
+.bookings .today a {
+  background: #111111; }
+/* line 72, ../scss/_bookings.scss */
+.bookings .done a {
+  background: #555;
+  color: #878785; }
+/* line 78, ../scss/_bookings.scss */
+.bookings article div {
+  display: none; }
+/* line 82, ../scss/_bookings.scss */
+.bookings .content.open {
+  background: #111111;
+  display: block;
+  clear: both;
+  padding: 20px;
+  border-right: 1px solid #eee;
+  border-left: 1px solid #eee;
+  color: #fff; }
+  /* line 90, ../scss/_bookings.scss */
+  .bookings .content.open h4 {
+    font-size: 1.3em;
+    font-weight: 100;
+    padding: 0 0 20px;
+    margin: 0;
+    color: #fff; }
+  /* line 97, ../scss/_bookings.scss */
+  .bookings .content.open h6 {
+    padding: 0;
+    margin: 10px 0;
+    color: red; }
