--- a/wp-content/themes/Masterchef/css/style.css
+++ b/wp-content/themes/Masterchef/css/style.css
@@ -1316,16 +1316,22 @@ body {
 
 /* line 1, ../scss/_header.scss */
 header.mainhead {
-  background: url(../img/slider1.jpg) center top;
-  background-size: cover; }
-  /* line 8, ../scss/_header.scss */
+  position: relative;
+  height: 440px;
+  overflow: hidden; }
+  /* line 5, ../scss/_header.scss */
+  header.mainhead .container {
+    position: absolute;
+    top: 0;
+    width: 100%; }
+  /* line 11, ../scss/_header.scss */
   header.mainhead .row h1 a {
     width: 300px;
     height: 300px;
     background: rgba(0, 0, 0, 0.7) url(../img/logo.png) no-repeat center center;
     text-indent: -9999px;
     display: block;
-    margin: 20px auto;
+    margin: 10px auto;
     -webkit-border-radius: 150px;
     -moz-border-radius: 150px;
     -ms-border-radius: 150px;
@@ -1336,34 +1342,51 @@ header.mainhead {
     -o-transition-duration: 0.5s;
     transition-duration: 0.5s; }
     @media only screen and (min-width: 768px) {
-      /* line 8, ../scss/_header.scss */
+      /* line 11, ../scss/_header.scss */
       header.mainhead .row h1 a {
         margin: 70px 0; } }
-    /* line 20, ../scss/_header.scss */
+    /* line 23, ../scss/_header.scss */
     header.mainhead .row h1 a:hover {
       background: rgba(0, 0, 0, 0.8) url(../img/logo.png) no-repeat center center; }
-  /* line 26, ../scss/_header.scss */
-  header.mainhead .mc-slider {
-    position: relative;
-    top: -440px;
-    z-index: -1;
-    height: 440px;
-    display: block; }
-  /* line 34, ../scss/_header.scss */
+  /* line 30, ../scss/_header.scss */
   header.mainhead .call-to-action {
     position: relative; }
     @media only screen and (min-width: 768px) {
-      /* line 34, ../scss/_header.scss */
+      /* line 30, ../scss/_header.scss */
       header.mainhead .call-to-action {
         top: 264px; } }
     @media (max-width: 907px) and (min-width: 768px) {
-      /* line 40, ../scss/_header.scss */
+      /* line 36, ../scss/_header.scss */
       header.mainhead .call-to-action .button {
         padding: 5px 10px; } }
 
-/* line 47, ../scss/_header.scss */
+/* line 43, ../scss/_header.scss */
 .main-content {
   margin-top: 40px; }
+
+/* Slider Images */
+/* line 49, ../scss/_header.scss */
+.slider {
+  position: relative; }
+  @media (max-width: 1470px) {
+    /* line 49, ../scss/_header.scss */
+    .slider {
+      width: 1470px;
+      left: 50%;
+      margin-left: -735px; } }
+  /* line 56, ../scss/_header.scss */
+  .slider img {
+    position: absolute;
+    top: 0;
+    max-width: 100%;
+    opacity: 0;
+    -webkit-transition: 2s;
+    -moz-transition: 2s;
+    -o-transition: 2s;
+    transition: 2s; }
+    /* line 62, ../scss/_header.scss */
+    .slider img.active {
+      opacity: 1; }
 
 /* line 2, ../scss/_talent.scss */
 .boxes article {
