--- a/wp-content/themes/Masterchef/css/style.css
+++ b/wp-content/themes/Masterchef/css/style.css
@@ -1511,68 +1511,71 @@ header.mainhead {
   line-height: 45px;
   font-size: 1.3em;
   border-right: 1px solid #eee; }
-/* line 13, ../scss/_bookings.scss */
+/* line 14, ../scss/_bookings.scss */
 .bookings article {
   display: inline;
   float: left;
   width: 14.2857%;
   height: 45px; }
-/* line 24, ../scss/_bookings.scss */
-.bookings article a {
-  width: 100%;
-  height: 45px;
-  text-align: left;
-  line-height: 45px;
-  display: block;
-  font-size: 1.3em;
-  color: #111111;
-  border: 1px solid #eee;
-  background: #fff;
-  text-decoration: none;
-  -webkit-transition-property: all;
-  -moz-transition-property: all;
-  -o-transition-property: all;
-  transition-property: all;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s;
-  -webkit-transition-timing-function: ease-in;
-  -moz-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-  padding-left: 20px; }
-  /* line 40, ../scss/_bookings.scss */
-  .bookings article a.select {
+  /* line 20, ../scss/_bookings.scss */
+  .bookings article a {
+    width: 100%;
+    height: 45px;
+    text-align: center;
+    line-height: 45px;
+    display: block;
+    font-size: 1.3em;
+    color: #111111;
+    border: 1px solid #eee;
+    background: #fff;
+    text-decoration: none;
+    -webkit-transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -o-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    -webkit-transition-timing-function: ease-in;
+    -moz-transition-timing-function: ease-in;
+    -o-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    padding-left: 20px; }
+    /* line 36, ../scss/_bookings.scss */
+    .bookings article a span {
+      font-size: 1rem;
+      color: red; }
+    /* line 38, ../scss/_bookings.scss */
+    .bookings article a.closed {
+      color: #878785; }
+    /* line 42, ../scss/_bookings.scss */
+    .bookings article a.sold {
+      color: red; }
+    /* line 47, ../scss/_bookings.scss */
+    .bookings article a.select, .bookings article a:hover {
+      background: #111111;
+      border-bottom: 1px solid #111111;
+      color: white; }
+  /* line 55, ../scss/_bookings.scss */
+  .bookings article.day a {
+    text-align: center;
+    border: none;
     background: #111111;
-    border-bottom: 1px solid #111111;
-    color: white; }
-  /* line 46, ../scss/_bookings.scss */
-  .bookings article a:hover {
-    background: #111111;
-    color: white; }
-/* line 52, ../scss/_bookings.scss */
-.bookings article.day a {
-  text-align: center;
-  border: none;
-  background: #111111;
-  color: #fff;
-  height: 50px;
-  line-height: 50px; }
-/* line 61, ../scss/_bookings.scss */
-.bookings article.closed a {
-  color: #878785; }
-/* line 66, ../scss/_bookings.scss */
+    color: #fff;
+    height: 50px;
+    line-height: 50px; }
+/* line 65, ../scss/_bookings.scss */
 .bookings .today a {
   background: #111111; }
-/* line 72, ../scss/_bookings.scss */
+/* line 71, ../scss/_bookings.scss */
 .bookings .done a {
   background: #555;
   color: #878785; }
-/* line 78, ../scss/_bookings.scss */
+/* line 77, ../scss/_bookings.scss */
 .bookings article div {
   display: none; }
-/* line 82, ../scss/_bookings.scss */
+/* line 81, ../scss/_bookings.scss */
 .bookings .content.open {
   background: #111111;
   display: block;
@@ -1588,7 +1591,7 @@ header.mainhead {
     padding: 0 0 20px;
     margin: 0;
     color: #fff; }
-  /* line 97, ../scss/_bookings.scss */
+  /* line 98, ../scss/_bookings.scss */
   .bookings .content.open h6 {
     padding: 0;
     margin: 10px 0;
