--- a/wp-content/themes/Masterchef/scss/foundation/_buttons.scss
+++ b/wp-content/themes/Masterchef/scss/foundation/_buttons.scss
@@ -7,6 +7,7 @@
   margin: 0 0 5px;
   text-transform: uppercase;
   @include transition-duration(0.5s);
+  font-family: $heading-text;
   background: white;
   color: $primary-color;
   &.white-trans {
