--- a/wp-content/themes/Masterchef/scss/foundation/_type.scss
+++ b/wp-content/themes/Masterchef/scss/foundation/_type.scss
@@ -35,8 +35,6 @@ p {
     font-style: italic; }
 }
 
-
-
 h1, h2, h3, h4, h5, h6 {
   font-family: $heading-text;
   font-weight: 300;
@@ -97,10 +95,10 @@ h6 {
 
 
 hr {
-  border: solid #dddddd;
-  border-width: 1px 0 0;
+  border-top: 1px solid #bbb;
+  border-bottom: 1px solid #fff;
   clear: both;
-  margin: 1.25em 0 1.1875em;
+  margin: 1.25em 0;
   height: 0; }
 
 /* Helpful Typography Defaults */
