--- a/wp-content/themes/Masterchef/scss/_footer.scss
+++ b/wp-content/themes/Masterchef/scss/_footer.scss
@@ -1,4 +1,7 @@
 footer.full-width {
-  background: #333;
-  
+  background: #222;
+  color: $mcgrey;
+  padding: $padding 0;
+  text-align: center;
+  margin-top: 2*$padding;
 }
