--- a/wp-content/themes/Masterchef/scss/_buttons.scss
+++ b/wp-content/themes/Masterchef/scss/_buttons.scss
@@ -43,6 +43,33 @@
   }
 }
 
+#sidebar {
+  h2 {
+    a.button {
+      font-size: 0.8*$big-screen-font-size;
+      width: 60%;
+      padding: 5px 5px;
+      position: absolute;
+      top:7px;
+      right:5px;
+        &:after {
+          top: 6px;
+          font-size: 1.2em;
+        }
+      @media screen and (min-width: 915px){
+        padding: 10px 5px;
+        font-size: $big-screen-font-size;
+        &:after {
+          top:10px;
+          right: 5px;
+          font-size: 1.5em;
+        }
+      }        
+    }
+  }
+}
+
+
 .contact-buttons .button {
   @include basefont;
   background: $primary-color;
