--- a/wp-content/themes/Masterchef/scss/_boxed.scss
+++ b/wp-content/themes/Masterchef/scss/_boxed.scss
@@ -41,8 +41,8 @@
     position:relative;
     
     &:after {
-      font-family: 'entypo', sans-serif;
-      content:'\E766';
+      font-family: 'mcdicon', sans-serif;
+      content:'\!';
       color: $primary-color;
       position: absolute;
       right: 12px;
