--- a/wp-content/themes/Masterchef/css/style.css
+++ b/wp-content/themes/Masterchef/css/style.css
@@ -1831,6 +1831,122 @@ footer.full-width {
   #sidebar .share a.addthis_button_compact:before {
     content: '\('; }
 
+/* line 3, ../scss/_partners.scss */
+.partners article {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline;
+  float: left;
+  width: 100%;
+  padding: 0;
+  margin: 0 0 20px; }
+@media only screen and (min-width: 450px) {
+  /* line 14, ../scss/_partners.scss */
+  .partners .tier_1 article {
+    width: 48%;
+    margin-right: 2%; } }
+/* line 21, ../scss/_partners.scss */
+.partners .tier_2 article {
+  width: 48%;
+  margin-right: 2%; }
+  @media only screen and (min-width: 450px) {
+    /* line 21, ../scss/_partners.scss */
+    .partners .tier_2 article {
+      width: 31%;
+      margin-right: 2%; } }
+/* line 31, ../scss/_partners.scss */
+.partners article a {
+  display: block;
+  padding: 0;
+  background: #fff;
+  text-decoration: none; }
+/* line 38, ../scss/_partners.scss */
+.partners article img {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 0;
+  margin: 0; }
+/* line 47, ../scss/_partners.scss */
+.partners article .small-details {
+  padding: 14px 10px;
+  position: relative; }
+  /* line 49, ../scss/_partners.scss */
+  .partners article .small-details b {
+    margin: 0;
+    padding: 0;
+    color: #111111;
+    font-family: "EurostileLTPro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; }
+  /* line 55, ../scss/_partners.scss */
+  .partners article .small-details:after {
+    font-family: 'mcdicon', sans-serif;
+    content: '\!';
+    color: #111111;
+    position: absolute;
+    right: 12px;
+    top: 10px;
+    font-size: 1.5em;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s; }
+/* line 67, ../scss/_partners.scss */
+.partners article a:hover .small-details:after {
+  right: 6px; }
+/* line 71, ../scss/_partners.scss */
+.partners article.current {
+  margin-bottom: 0;
+  border-bottom: 20px solid white; }
+  /* line 74, ../scss/_partners.scss */
+  .partners article.current .small-details:after {
+    font-family: 'mcdicon', sans-serif;
+    content: '\#';
+    right: 12px;
+    color: #878785; }
+/* line 82, ../scss/_partners.scss */
+.partners article.current a:hover .small-details:after {
+  right: 12px;
+  color: #111111; }
+/* line 87, ../scss/_partners.scss */
+.partners article div.details {
+  display: none; }
+/* line 91, ../scss/_partners.scss */
+.partners .content {
+  clear: both;
+  background: #fff;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s; }
+  /* line 101, ../scss/_partners.scss */
+  .partners .content img, .partners .content h4 {
+    display: none; }
+    @media only screen and (min-width: 400px) {
+      /* line 101, ../scss/_partners.scss */
+      .partners .content img, .partners .content h4 {
+        display: block; } }
+/* line 109, ../scss/_partners.scss */
+.partners .content.open {
+  max-height: 1000px;
+  padding: 20px;
+  opacity: 1; }
+  @media only screen and (min-width: 400px) {
+    /* line 109, ../scss/_partners.scss */
+    .partners .content.open {
+      margin: 0 2% 10px 0; } }
+  @media only screen and (min-width: 920px) {
+    /* line 109, ../scss/_partners.scss */
+    .partners .content.open {
+      margin: 0 3% 10px 0; } }
+
 /* line 2, ../scss/_boxed.scss */
 .boxed article {
   -moz-box-sizing: border-box;
