--- a/wp-content/themes/Masterchef/scss/_partners.scss
+++ b/wp-content/themes/Masterchef/scss/_partners.scss
@@ -26,6 +26,16 @@
         margin-right: 2%;
       }
     }
+    
+  .tier_3 a {
+    display: block;
+    width: 23.5%;
+    margin-right: 1.5%;
+    margin-bottom: 10px;
+    img {
+      max-width: 100%;
+    }
+  }
   
   
   article a {
