--- a/wp-content/themes/Masterchef/scss/_footer.scss
+++ b/wp-content/themes/Masterchef/scss/_footer.scss
@@ -4,6 +4,26 @@ footer.full-width {
   padding: $padding 0;
   text-align: center;
   margin-top: 2*$padding;
+  
+  .follow {
+    margin-bottom: $padding;
+    h3 {
+      color: #fff;
+      display: inline-block;
+    }
+    
+    a {
+      position: relative;
+      color: #fff;
+      width: 20px;
+      height: 20px;
+      padding-right: 10px;
+      text-indent: -9999px;
+      &:hover {color:$mcorange;}
+      &:before {font-size: 1.8em;}
+    }
+    
+  }
   p {
     color: white;
     a {
